force-app/main/default/objects/Knowledge__kav/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <inlineHelpText>Utilice este campo para documentar la respuesta a la pregunta discutida en el Artículo de conocimiento.</inlineHelpText>
    <label>Respuesta</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>