force-app/main/default/objects/Knowledge__kav/fields/Articulo__c.field-meta.xml
<CustomField>
    <fullName>Articulo__c</fullName>
    <label>Artículo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>