force-app/main/default/objects/Knowledge__kav/fields/Procedure_Audience__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Audience__c</fullName>
    <inlineHelpText>Utilice este campo para identificar quién debe seguir o ejecutar este procedimiento. Si tiene una lista de personas o grupos, puede convertirla en una lista de selección predefinida.</inlineHelpText>
    <label>Procedimiento Audiencia</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>