force-app/main/default/objects/Knowledge__kav/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <inlineHelpText>Utilice este campo para documentar la pregunta a la que responde este artículo. Incluya palabras clave importantes para ayudar a los usuarios a encontrar este artículo.</inlineHelpText>
    <label>Pregunta</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>