force-app/main/default/objects/Knowledge__kav/recordTypes/Orientacion_al_Agente.recordType-meta.xml
<RecordType>
    <fullName>Orientacion_al_Agente</fullName>
    <active>true</active>
    <description>Se utiliza como base de conocimiento para el agente respecto a definiciones y procesos</description>
    <label>Orientación al Agente</label>
</RecordType>