force-app/main/default/objects/Knowledge__kav/recordTypes/Procedimiento.recordType-meta.xml
<RecordType>
    <fullName>Procedimiento</fullName>
    <active>true</active>
    <description>Se utiliza para definir los pasos a seguir en este proceso</description>
    <label>Procedimiento</label>
</RecordType>